--- a/Labfiles/05-image-generation/CSharp/appsettings.json
+++ b/Labfiles/05-image-generation/CSharp/appsettings.json
@@ -1,4 +1,4 @@
 {
-    "AzureOAIEndpoint": "YOUR_ENDPOINT",
-    "AzureOAIKey": "YOUR_KEY"
+    "AzureOAIEndpoint": https://swedenopenaijb3.openai.azure.com/
+    "AzureOAIKey": 5e83b8dec2034de1aec0c7d1c225da3a
 }
