--- a/Labfiles/05-image-generation/Python/.env
+++ b/Labfiles/05-image-generation/Python/.env
@@ -1,2 +1,2 @@
-AZURE_OAI_ENDPOINT=YOUR_ENDPOINT
-AZURE_OAI_KEY=YOUR_KEY
+AZURE_OAI_ENDPOINT=https://swedenopenaijb3.openai.azure.com/
+AZURE_OAI_KEY=5e83b8dec2034de1aec0c7d1c225da3a
